# python-config-type-safety

./: README.md  pyproject.toml  run.sh
src/python_config_type_safety/: bad_config.yaml  config.yaml  main.py  train_config.py
